# maxwell-master-rust

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md
certificates/: localhost.crt  localhost.key  loclahost.csr
config/: config.template.toml  config.toml  log4rs.yaml
src/: config.rs  db.rs  handler.rs  http_handler.rs  main.rs  node_mgr.rs  route_mgr.rs  topic_mgr.rs
src/handler/: http_handler.rs  mod.rs  ws_handler.rs
src/node_mgr/: backend_mgr.rs  frontend_mgr.rs  mod.rs  service_mgr.rs
