[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-master"
version = "0.6.0"

[dependencies]
config = "0.14.0"
log = "0.4.21"
log4rs = "1.3.0"

actix = "0.13.3"
actix-cors = "0.6.5"
actix-web = {version = "4.5.1", features = ["rustls-0_21"]}
actix-web-actors = "4.3.0"
futures = "0.3.30"
rustls = "0.21.10"
rustls-pemfile = "1.0.4"
tokio = {version = "1.36.0", features = ["full"]}

ahash = "0.8.11"
anyhow = "1.0.81"
bincode = "1.3.3"
bytes = "1.5.0"
chrono = "0.4.35"
crc32fast = "1.4.0"
dashmap = "5.5.3"
once_cell = "1.19.0"
quick_cache = "0.4.1"
rand = "0.8.5"
serde = "1.0.197"
serde_derive = "1.0.197"
seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.10.1"}

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.22.1"}
