[package]
authors = ["Chaoqian Xu <chaoranxu@gmail.com>"]
edition = "2021"
name = "maxwell-master"
version = "0.9.2"

[dependencies]
config = "0.14.0"
log = "0.4.22"
log4rs = "1.3.0"

actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = {version = "4.9.0", features = ["rustls-0_23"]}
actix-web-actors = "4.3.1"
futures = "0.3.30"
rustls = "0.23.12"
rustls-pemfile = "2.1.3"
tokio = {version = "1.40.0", features = ["full"]}

ahash = "0.8.11"
anyhow = "1.0.87"
bincode = "1.3.3"
bytes = "1.7.1"
chrono = "0.4.38"
crc32fast = "1.4.2"
dashmap = "6.1.0"
once_cell = "1.19.0"
quick_cache = "0.6.6"
rand = "0.8.5"
serde = "1.0.210"
serde_derive = "1.0.210"
seriesdb = {git = "https://github.com/xuchaoqian/seriesdb-rust.git", tag = "v0.10.1"}

maxwell-protocol = {git = "https://github.com/maxwell-dev/maxwell-protocol-rust.git", tag = "v0.24.1"}
